# stellar-split-bill

./: .gitignore  Cargo.toml  DEMO_SCRIPT.md  README.md  SCREENSHOT_GUIDE.md  SUBMISSION_NOTES.md  wasm32-soroban.json
.github/workflows/: ci.yml
contracts/dao-core/: Cargo.toml
contracts/dao-core/src/: lib.rs  test.rs
contracts/dao-token/: Cargo.toml
contracts/dao-token/src/: lib.rs  test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/split-core/: Cargo.toml
contracts/split-core/src/: lib.rs  test.rs
contracts/split-token/: Cargo.toml
contracts/split-token/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  StellarSplitBillLogo.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx
screenshots/: contract-interactions.txt  test-results.txt
storytelling/: .gitignore  README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
storytelling/app/: globals.css  layout.tsx  page.tsx
storytelling/components/brand/: SplitBillLogo.tsx  SuivanLogo.tsx  SuivanMark.tsx
storytelling/components/fx/: CustomCursor.tsx  Grain.tsx  Preloader.tsx
storytelling/components/graphics/: Motifs.tsx  PackArt.tsx  ReactiveArt.tsx
storytelling/components/motion/: SmoothScroll.tsx  usePinned.ts  (+7 more)
storytelling/lib/: motion.ts  reveal.ts
storytelling/tests/: i18n.test.ts  locale-provider.test.tsx  motion.test.ts  sections.test.tsx
(+28 files in other folders)
